feat: Nexon change to SF PRO

--- a/src/App.less
+++ b/src/App.less
@@ -1,26 +1,42 @@
 @import "~antd/dist/antd.less";
 
-@font-face {
-  font-family: "NexonBo";
-  src: url("./font/NEXONLv1GothicBold.ttf");
+/* SF Pro font-weight
+  light: 400
+  medium: 500
+  bold: 700
+  heavy: 800
+*/
+
+@font-face { // Light
+  font-family: "sfPro";
+  font-weight: 400;
+  src: url("./font/SF-Pro.ttf") format("truetype");
 }
 
-@font-face {
-  font-family: "NexonRe";
-  src: url("./font/NEXONLv1GothicRegular.ttf");
+@font-face { // Medium
+  font-family: "sfPro";
+  font-weight: 500;
+  src: url("./font/SF-Pro.ttf") format("truetype");
 }
 
-@font-face {
-  font-family: "NexonLi";
-  src: url("./font/NEXONLv1GothicLight.ttf");
+@font-face { // Bold
+  font-family: "sfPro";
+  font-weight: 700;
+  src: url("./font/SF-Pro.ttf") format("truetype");
+}
+
+@font-face { // Heavy
+  font-family: "sfPro";
+  font-weight: 800;
+  src: url("./font/SF-Pro.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "tmoneyBo";
-  src: url("./font/TmoneyRoundWindExtraBold.ttf");
+  src: url("./font/TmoneyRoundWindExtraBold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "tmoneyRe";
-  src: url("./font/TmoneyRoundWindRegular.ttf");
+  src: url("./font/TmoneyRoundWindRegular.ttf") format("truetype");
 }
