--- a/src/App.less
+++ b/src/App.less
@@ -1,31 +1,31 @@
 @import "~antd/dist/antd.less";
 
 @font-face {
-  font-family: "sdLi";
+  font-family: "sdLi"; // Apple SD 산돌고딕 Neo Light
   src: url("./font/AppleSDGothicNeoL.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "sdMe";
+  font-family: "sdMe"; // Apple SD 산돌고딕 Neo Medium
   src: url("./font/AppleSDGothicNeoM.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "sdBo";
+  font-family: "sdBo"; // Apple SD 산돌고딕 Neo Bold
   src: url("./font/AppleSDGothicNeoB.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "sdSb";
+  font-family: "sdSb"; // Apple SD 산돌고딕 Neo Semi Bold
   src: url("./font/AppleSDGothicNeoSB.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "tmoneyBo";
+  font-family: "tmoneyBo"; // 티머니 둥근바람 Bold
   src: url("./font/TmoneyRoundWindExtraBold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "tmoneyRe";
+  font-family: "tmoneyRe"; // 티머니 둥근바람 regular
   src: url("./font/TmoneyRoundWindRegular.ttf") format("truetype");
 }
